TP3/src/assets/style.css
body {
    font-family: 'Roboto Slab', 'sans-serif';
    font-size: 16px;
    background-color: #fff;
    color: #2A2B2E;
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

header {
    background-color: #fff;
    padding: 25px 100px;
    border-bottom: 2px solid #97939A;
}

main {
    height: 100%;
    padding-right: 25px;
}

h1 {
    color: #2A2B2E;
    font-family: 'Roboto Slab', 'serif';
    font-size: 56px;
    margin: 0;
    font-weight: normal;
}

h2 {
    color: #2A2B2E;
    font-family: 'Roboto Slab', 'serif';
    font-weight: normal;
}

svg {
    background-color: #ffffff;
}

button {
    padding: 10px 30px;
    color: #000;
    background-color: #fff;
    border: 1px solid #333;
    border-radius: 4px;
    cursor: pointer;
    outline: 0;
    font-family: 'Helvetica', 'sans-serif';
    font-size: 16px;
}

button:hover, button:active {
	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
	background-color:#f6f6f6;
}

.title, .axis-text {
    transform-origin: center;
    transform-box: fill-box;
    text-anchor: middle;
}

.viz-container{
    height: 100%;
    padding: 0 100px;
}

.graph {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tick line{
    visibility: hidden;
  }

  .info {
      pointer-events: none;
      font-family: 'Roboto';
  }

  .axis text {
      font-family: 'Roboto';
      cursor: default;
      transform-box: fill-box;
      transform-origin: center;
  }

  .axis path {
      opacity: 0;
  }

